# venga-bombers

./: .travis-dependencies.sh  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  platformio.ini
doc/: .gitignore  build.sh  technical-design.tex
doc/res/: DIP-switch.fzz  nunchuck.fzz  potentiometer.fzz  seven-segment.fzz
doc/technical-design/: bibliography.tex  concepts.tex  hardware.tex  intro.tex  libraries.tex  menus.tex  music.tex  rendering.tex  textures.tex  timeout.tex
scripts/: bomberman-terminal.sh  generate-textures
src/: audio.c  audio.h  bomb.c  boom-boom-boom-boom.c  brightness.c  control.c  controls.c  display.c  event-handling.c  event.c  explosion.c  font.c  font.h  game-state.c  game.h  highscores.c  interrupts.c  lcd-renderer.c  level-gen.c  level-generator.c  main.c  options.h  player.c  render.c  score.c  seven-segment-renderer.c  terminal-control.c  terminal-renderer.c  texture.c  texture.h  textures.c  timeout.c  timeout.h  touch-buttons.h  world.c
textures/: bombs.xcf  empty.xcf  error.xcf  explosion.xcf  numbers.xcf  players.xcf  solid.xcf  static.xcf  ui.xcf  upgrades.xcf
